# uni_rt_dont_rewrite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clement.c  generate_samples.py  pretty.ipynb  test.py  test.spv  test2.py
shaders/: accumulator.comp.glsl  asvgf_color_atrous.comp.glsl  asvgf_gradient_atrous.comp.glsl  asvgf_gradient_img.comp.glsl  asvgf_gradient_reproject-old.comp.glsl  asvgf_gradient_reproject.comp.glsl  asvgf_gradient_reprojection.comp.glsl  asvgf_temporal.comp.glsl  bmfr_regression.comp.glsl  bmfr_regression_renew.comp.glsl  bmfr_reprojection.comp.glsl  features.frag.glsl  features.vert.glsl  pls.txt  ta.comp.glsl
source/: embree_utils.h  flatten_gltf.cpp  glad.c  main.cpp  mesh.h  render.cpp  render.h  scene.cpp  scene.h  tiny_gltf.h  util.cpp
source/denoisers/: a-svgf.cpp  a-svgf.h  accumulator.cpp  accumulator.h  bmfr.cpp  bmfr.h  bmfr_renew.cpp  bmfr_renew.h  denoiser.h  none.cpp  none.h  oidn.cpp  oidn.h  tnnd.cpp  tnnd.h
source/embree/: blue_noise_rng.ih  disney_bsdf.ih  embree.ispc  embree_utils.h  lcg_rng.ih  util.ih
source/glad/: glad.h
training/: training.ipynb
